fix broken style

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,6 +10,7 @@ html, body {
 .container {
   width: 100%;
   height: 100%;
+  padding-top: 50px;
 }
 
 table {
